deployment/apps/kiali/base/kiali-operator.yaml
---
# Source: kiali-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali-operator
  namespace: "kiali-operator"
  labels:
    helm.sh/chart: kiali-operator-2.1.0
    app: kiali-operator
    app.kubernetes.io/name: kiali-operator
    app.kubernetes.io/instance: kiali-operator
    version: "v2.1.0"
    app.kubernetes.io/version: "v2.1.0"
    app.kubernetes.io/part-of: "kiali-operator"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali-operator
      app.kubernetes.io/instance: kiali-operator
  template:
    metadata:
      name: kiali-operator
      namespace: "kiali-operator"
      labels:
        # required for the operator SDK metric service selector
        name: kiali-operator
        helm.sh/chart: kiali-operator-2.1.0
        app: kiali-operator
        app.kubernetes.io/name: kiali-operator
        app.kubernetes.io/instance: kiali-operator
        version: "v2.1.0"
        app.kubernetes.io/version: "v2.1.0"
        app.kubernetes.io/part-of: "kiali-operator"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: kiali-operator
      containers:
      - name: operator
        image: "quay.io/kiali/kiali-operator:v2.1.0"
        imagePullPolicy: Always
        args:
        - "--zap-log-level=info"
        - "--leader-election-id=kiali-operator"
        - "--watches-file=./$(WATCHES_FILE)"
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        ports:
        - name: http-metrics
          containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
      volumes:
      - name: tmp
        emptyDir: {}
      affinity:
        {}
...
---
# Source: kiali-operator/templates/ossmconsole-crd.yaml
# The operator will watch resources of this kind and install OSSMC when one is found.
# This CRD needs to be templated because we do not want it installed on non-OpenShift clusters.
# However, the crds/ directory is not templated by Helm. See the Helm documentation on this here:
# https://helm.sh/docs/chart_best_practices/custom_resource_definitions/#method-1-let-helm-do-it-for-you
# Therefore, this CRD declaration is in templates/. The operator helm chart does not create resources
# of this kind, so this should be OK. Just realize if you uninstall the operator, this CRD will also
# be uninstalled (and thus any existing OSSMC CR will also be purged).
